Added absolute paths.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
-  <link rel="stylesheet" href="/styles.css">
+  <link rel="stylesheet" href="./styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -18,11 +18,11 @@
 <body>
   <section>
     <heading class="heading-logo">
-      <img src="/images/logo.svg" alt="logo">
+      <img src="./images/logo.svg" alt="logo">
     </heading>
     <article>
       <div class="mockup">
-        <img src="/images/illustration-mockups.svg" alt="mockups">
+        <img src="./images/illustration-mockups.svg" alt="mockups">
       </div>
       <div class="article-body">
         <h1>Build The Community Your Fans Will Love</h1>
@@ -32,9 +32,9 @@
       </div>
     </article>
     <footer>
-      <img src="/images/logo-facebook.svg" class="logo" alt="facebook-logo">
-      <img src="/images/logo-twitter.svg" class="logo" alt="twitter-logo">
-      <img src="/images/logo-instagram.svg" class="logo" alt="instagram-logo">
+      <img src="./images/logo-facebook.svg" class="logo" alt="facebook-logo">
+      <img src="./images/logo-twitter.svg" class="logo" alt="twitter-logo">
+      <img src="./images/logo-instagram.svg" class="logo" alt="instagram-logo">
     </footer>
   </section>
 </body>
